fixes layout alignment regression after adding github banner

--- a/switch/style.css
+++ b/switch/style.css
@@ -43,17 +43,22 @@ body {
   min-block-size: 100%;
   font-family: system-ui, sans-serif;
   display: grid;
-  grid-auto-columns: min(35ch, 100%);
-  gap: 5ch 20ch;
+  place-content: center;
   padding: 5ch;
-  align-items: start;
-  align-content: center;
-  justify-content: center;
 
-  @media (min-width: 720px) { & {
-    grid-auto-flow: column;
-    grid-auto-columns: 30ch;
-  }}
+  & > main {
+    display: grid;
+    grid-auto-columns: min(35ch, 100%);
+    gap: 5ch 20ch;
+    align-items: start;
+    align-content: center;
+    justify-content: center;
+
+    @media (min-width: 720px) { & {
+      grid-auto-flow: column;
+      grid-auto-columns: 30ch;
+    }}
+  }
 }
 
 section {
